vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__allocator_subtype_constrained_range_attribute.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"new integer_vector(foo'range)\")"
---
Allocator
  Keyword(New)
  Name
    Identifier 'integer_vector'
    ParenthesizedName
      LeftPar
      AssociationList
        AssociationElement
          ActualPart
            ActualPartExpression
              NameExpression
                Name
                  Identifier 'foo'
                  AttributeName
                    Tick
                    Keyword(Range)
      RightPar
