vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__character_literal.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"'a'\")"
---
NameExpression
  Name
    NameDesignatorPrefix
      CharacterLiteral ''a''
