vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__condition_operator.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"?? 9\")"
---
UnaryExpression
  QueQue
  LiteralExpression
    AbstractLiteral '9'
