vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__expression_precedence-11.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"not + 1\")"
---
UnaryExpression
  Keyword(Not)
  UnaryExpression
    Plus
    LiteralExpression
      AbstractLiteral '1'
