vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__expression_precedence-14.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"1 + 2 and 3 + 4\")"
---
BinaryExpression
  BinaryExpression
    LiteralExpression
      AbstractLiteral '1'
    Plus
    LiteralExpression
      AbstractLiteral '2'
  Keyword(And)
  BinaryExpression
    LiteralExpression
      AbstractLiteral '3'
    Plus
    LiteralExpression
      AbstractLiteral '4'
