vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__expression_precedence-15.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"and 1 + 2\")"
---
BinaryExpression
  UnaryExpression
    Keyword(And)
    LiteralExpression
      AbstractLiteral '1'
  Plus
  LiteralExpression
    AbstractLiteral '2'
